<resources>
    <string name="app_name">Pet2U</string>
    <string name="facebook_app_id">607915716476684</string>
    <string name="fb_login_protocol_scheme">fb607915716476684</string>
    <string name="entrar_com_facebook">Entrar com Facebook</string>
    <string name="criar_nova_conta_do_pet2u">Criar nova conta do Pet2U</string>
    <string name="entrarPerfil">Entrar</string>
    <string name="logo_pet2u">Logo pet2U</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista_petshops">ListaPetshopsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="descreva_seu_petshop">Descreva seu Petshop</string>
    <string name="nome_produto_atual">Nome Atual:</string>
    <string name="descricao_produto_atual">Descrição Atual:</string>
    <string name="preco_produto_atual">Preço Atual:</string>
    <string name="novo_nome_produto">Novo Nome</string>
    <string name="nova_descricao_produto">Nova Descrição</string>
    <string name="novo_preco_produto">Novo Preço</string>
    <string name="nome_pet_atual">Nome Atual:</string>
    <string name="nascimento_pet_atual">Data de Nascimento Atual:</string>
    <string name="castrado_pet_atual">Castração Atual:</string>
    <string name="novo_nome_pet">Novo Nome</string>
    <string name="novo_nascimento_pet">Nova Data de Nascimento</string>
    <string name="novo_castrado_pet">Novo Status de Castração</string>
    <string name="Title_cadastro_petshop">Cadastro Petshop</string>
    <string name="subtitle_cad_petshop">Informações do Petshop</string>
    <string name="descricao_petshop_cadastro">Descrição:</string>
    <string name="saiba_mais"><u>Saiba mais.</u></string>
    <string name="frete_txt"><b>Frete grátis</b> para todo o Distrito Federal!! </string>
    <string-array name="states">
        <item>"UF"</item>
        <item>"AC"</item>
        <item>"AL"</item>
        <item>"AP"</item>
        <item>"AM"</item>
        <item>"BA"</item>
        <item>"CE"</item>
        <item>"DF"</item>
        <item>"ES"</item>
        <item>"GO"</item>
        <item>"MA"</item>
        <item>"MT"</item>
        <item>"MS"</item>
        <item>"MG"</item>
        <item>"PA"</item>
        <item>"PB"</item>
        <item>"PR"</item>
        <item>"PE"</item>
        <item>"PI"</item>
        <item>"RJ"</item>
        <item>"RN"</item>
        <item>"RS</item>
        <item>"RO</item>
        <item>"RR</item>
        <item>"SC</item>
        <item>"SP</item>
        <item>"SE</item>
        <item>"TO</item>
    </string-array>
    <string-array name="categorias">
        <item>Selecione uma categoria</item>
        <item>Rações</item>
        <item>Saúde</item>
        <item>Limpeza e Higiene</item>
        <item>Acessórios para Alimentação</item>
        <item>Adestramento</item>
        <item>Bijuterias</item>
        <item>Brinquedos</item>
        <item>Caixas e Bolsas de Transporte</item>
        <item>Caminhas e Outros</item>
        <item>Casinha e Acessórios</item>
        <item>Coleiras, Guias e Peitorais</item>
        <item>Ossinhos e Petiscos</item>
        <item>Roupas e Acessórios</item>
        <item>Shampoos e Cosméticos</item>
    </string-array>
    <string-array name="categorias_servico">
        <item>Selecione uma categoria</item>
        <item>Higiene</item>
        <item>Lazer</item>
        <item>Saúde</item>
        <item>Estéticos</item>
    </string-array>
    <string-array name="raca_gato">
        <item>Sem Raça Definida (Vira Lata)</item>
        <item>Abissínio</item>
        <item>American Bobtail</item>
        <item>American Curl</item>
        <item>American Shorthair</item>
        <item>American Wirehair</item>
        <item>Angorá Turco</item>
        <item>Azul Russo</item>
        <item>Balinês</item>
        <item>Bengal</item>
        <item>Bombaim</item>
        <item>British Shorthair</item>
        <item>Burmês</item>
        <item>Burmila</item>
        <item>Califórnia Spangled</item>
        <item>Ceilão</item>
        <item>Chartreux</item>
        <item>Cornish Rex</item>
        <item>Cymric</item>
        <item>Devon Rex</item>
        <item>Europeu</item>
        <item>Exotic Shorthair</item>
        <item>Gato dos Bosques da Noruega</item>
        <item>German Rex</item>
        <item>Havana</item>
        <item>Himalaio</item>
        <item>Japanese Bobtail</item>
        <item>Javanês</item>
        <item>Korat</item>
        <item>Laperm</item>
        <item>Lince doméstico</item>
        <item>Maine Coon</item>
        <item>Manx</item>
        <item>Mau Egípcio</item>
        <item>Munchkin</item>
        <item>Ocicat</item>
        <item>Ojos azules</item>
        <item>Oriental</item>
        <item>Persa</item>
        <item>Pixie Bob</item>
        <item>Ragdoll</item>
        <item>Sagrado da Birmânia</item>
        <item>Scottish Fold</item>
        <item>Selkirk Rex</item>
        <item>Siamês</item>
        <item>Siberiano</item>
        <item>Singapura</item>
        <item>Snowshoe</item>
        <item>Sokoke</item>
        <item>Somali</item>
        <item>Sphynx</item>
        <item>Tonquinês</item>
        <item>Turco do Lago de Van</item>
        <item>York Chocolate</item>
    </string-array>
    <string-array name="raca_passaro">
        <item>Agapórnis</item>
        <item>Arara Vermelha de Asa Verde</item>
        <item>Azulão</item>
        <item>Bavette</item>
        <item>Bicudo</item>
        <item>Caboclinho</item>
        <item>Cacatua</item>
        <item>Calafate</item>
        <item>Calopsita</item>
        <item>Canário da Terra</item>
        <item>Canário de Harz</item>
        <item>Cardeal da Virgínia</item>
        <item>Coleiro</item>
        <item>Cordonbleu</item>
        <item>Coruja</item>
        <item>Curió</item>
        <item>Diamante de Gould</item>
        <item>Esplêndido</item>
        <item>Granatina</item>
        <item>Japim</item>
        <item>Lóris</item>
        <item>Mainá</item>
        <item>Mandarim</item>
        <item>Manon</item>
        <item>Melro</item>
        <item>Modesto</item>
        <item>Papagaio</item>
        <item>Papagaio Cinzento Africano</item>
        <item>Pardal Doméstico</item>
        <item>Patativa</item>
        <item>Periquito Australiano</item>
        <item>Periquito Maracanã</item>
        <item>Pintassilgo da Venezuela</item>
        <item>Rola Diamante</item>
        <item>Rolinha Fogo-Pagou</item>
        <item>Rouxinol de Pequim</item>
        <item>Sabiá Laranjeira</item>
        <item>Sairá-de-Lenço</item>
        <item>Starfinsh</item>
        <item>Tangará-Dançarino</item>
        <item>Tarim</item>
        <item>Tico-Tico</item>
        <item>Trinca Ferro</item>
        <item>Tucano</item>
        <item>Tuim</item>
    </string-array>
    <string-array name="raca_roedor">
        <item>Cão da Pradaria</item>
        <item>Chinchila</item>
        <item>Coelho</item>
        <item>Degu</item>
        <item>Duprasi</item>
        <item>Gerbo</item>
        <item>Hamster</item>
        <item>Porquinho da Índia</item>
    </string-array>
    <string-array name="raca_peixe">
        <item>Abelhinha</item>
        <item>Acará Bandeira</item>
        <item>Acará Disco</item>
        <item>Acará Jóia</item>
        <item>Anthias-Dourado</item>
        <item>Baiacú Biocelatus</item>
        <item>Beijador</item>
        <item>Beta</item>
        <item>Bótia</item>
        <item>Bótia Palhaço</item>
        <item>Cardinal Bangai</item>
        <item>Carpa</item>
        <item>Cascudo</item>
        <item>Ciclídeo</item>
        <item>Clown Triggerfish</item>
        <item>Colisa Lália</item>
        <item>Coridora</item>
        <item>Dourado</item>
        <item>Espada</item>
        <item>Flame Angel</item>
        <item>Green Chromis</item>
        <item>Killie Lira Comum</item>
        <item>Kinguio</item>
        <item>Lebiste</item>
        <item>Limpa Vidro</item>
        <item>Mato Grosso</item>
        <item>Molinésia</item>
        <item>Neon Cardinal</item>
        <item>Oscar</item>
        <item>Paulistinha</item>
        <item>Peixe Anjo Rainha</item>
        <item>Peixe-Mandarim</item>
        <item>Pintado</item>
        <item>Pirara</item>
        <item>Plati</item>
        <item>Purple Firefish</item>
        <item>Tetra Negro</item>
        <item>Tubarão Bala</item>
    </string-array>
    <string name="input_confirmar_senha">Confirmar Senha</string>
    <string name="Input_nome">Nome</string>
    <string name="Input_razao_social">Razão Social</string>
    <string name="input_cnpj">CNPJ</string>
    <string name="input_numero_endereco">Número</string>
    <string name="input_senha">Senha</string>
    <string name="input_complemento">Complemento</string>
    <string name="input_endereco">Endereço</string>
    <string name="input_uf">UF</string>
    <string name="input_telefone">Telefone</string>
    <string name="input_cep">CEP</string>
    <string name="input_cidade">Cidade</string>
    <string name="input_bairro">Bairro</string>
    <string name="input_email">Email</string>
    <string name="input_cpf">CPF</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_continuarPet">Continuar</string>
    <string name="botao_voltar">Voltar</string>
    <string name="confirmacao_excluir_produto">Tem certeza que deseja excluir este produto?</string>
    <string name="confirmacao_excluir_pet">Tem certeza que deseja excluir este pet?</string>
    <string name="sim_excluir_produto">Sim</string>
    <string name="nao_excluir_produto">Não</string>
    <string name="subtitle_cadDonoPet">Informações do dono do Petshop</string>
    <string name="sobreapp">Sobre o aplicativo</string>
    <string name="txt_sobre_o_app">O Pet2U é o método mais rápido de comprar produtos e serviços para o seu pet. O seu melhor amigo merece.</string>
    <string name="desenvolvido_por">Desenvolvido por</string>
    <string name="txt_desenvolvido_por">Pet2U Technology™</string>
    <string name="termos_condicoes">Termos e condições</string>
    <string name="versao_app">Versão do app: 1.0</string>
    <string name="imagem_pet2u_sobre">imagem_pet2u_sobre</string>
    <string name="pet2u_logo_desen">pet2u_logo_desen</string>
</resources>